# lauzhack_python_htmx

./: .gitignore  README.md  dodo.py  input.css  pyproject.toml  shell.nix  tailwind.config.js
db/: schema.sql
db/migrations/: 20231129203600_Init.sql
htmx_tutorial/: app.py  filtering_sorting_router.py  form_submission_router.py  live_data_router.py
htmx_tutorial/templates/: base.html  index.html
htmx_tutorial/templates/filtering-sorting/: content.html  index.html
htmx_tutorial/templates/form-submission/: image-preview.html  index.html  resize-output.html  size-preview.html
htmx_tutorial/templates/live-data/: data-update.html  index.html
lauzhack_pictorial/: app.py  config.py  dtos.py  guards.py  middlewares.py  routers.py  state.py
lauzhack_pictorial/db/: __init__.py  models.py  queries.sql
lauzhack_pictorial/templates/: base.html  footer.html  header.html  login.html  signup.html
lauzhack_pictorial/templates/generate/: generate-image-output.html  index.html
